@@ -286,7 +286,8 @@ NOTES
       return r
       
    def distance(name=None,selection1="(pk1)",selection2="(pk2)",cutoff=None,
-                mode=None,zoom=0,width=None,length=None,gap=None,labels=1,quiet=1):
+                mode=None,zoom=0,width=None,length=None,gap=None,labels=1,quiet=1,
+                reset=0):
       '''
 DESCRIPTION
 
@@ -375,7 +376,7 @@ NOTES
                selection2 = "("+selection2+")"
             r = _cmd.dist(str(nam),"("+str(selection1)+")",
                           str(selection2),int(mode),float(cutoff),
-                          int(labels),int(quiet))
+                          int(labels),int(quiet),int(reset))
             if width!=None:
                cmd.set("dash_width",width,nam)
             if length!=None:
